--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Index.cshtml
@@ -1,20 +1,23 @@
 @using Coldairarrow.Util;
+@using Coldairarrow.Business.Base_SysManage;
 @{
     Layout = "~/Views/Shared/_Layout_List.cshtml";
-
-
+    var userManage = PermissionManage.OperatorHasPermissionValue("sysuser.manage");
 }
 <div class="fx-content">
     <div id="toobar">
         <div class="btn-group btn-group-sm">
-            <button onclick="openForm('', 'NEW TOLL');" type="button" class="btn btn-default" aria-label="Left Align">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                NEW
-            </button>
-            <button onclick="deleteData();" type="button" class="btn btn-default" aria-label="Right Align">
-                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                DELETE
-            </button>
+            @if (userManage)
+            {
+                <button onclick="openForm('', 'NEW TOOL');" type="button" class="btn btn-default" aria-label="Left Align">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    NEW
+                </button>
+                <button onclick="deleteData();" type="button" class="btn btn-default" aria-label="Right Align">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                    DELETE
+                </button>
+            }
             <button type="button" class="btn btn-default" aria-label="Right Align" onclick="javascript: location.reload();">
                 <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
                 REFRESH
@@ -50,6 +53,7 @@
 </div>
 <script>
     var $table = $('#dataTable');
+    var userManage =@userManage.ToString().ToLower();
     var raiz = '/';
 
     $(function () {
@@ -81,9 +85,11 @@
                 {
                     title: 'ACTIONS', field: '_', width: '20%', formatter: function (value, row) {
                         var builder = new BtnBuilder();
-                        builder.AddBtn({ icon: 'glyphicon-edit', function: 'openForm', param: [row['Id'], 'EDIT TOOL'], title: "Edit tool" });
-                        builder.AddBtn({ icon: 'glyphicon-trash', function: 'deleteData', param: [row['Id']], title: "Delete tool" });
-                        builder.AddBtn({ icon: 'glyphicon-list-alt', function: 'openForm2', param: [row['Id'], 'INSPECTIONS'], title: "Add inspection" });
+                        if (userManage) {
+                            builder.AddBtn({ icon: 'glyphicon-edit', function: 'openForm', param: [row['Id'], 'EDIT TOOL'], title: "Edit tool" });
+                            builder.AddBtn({ icon: 'glyphicon-trash', function: 'deleteData', param: [row['Id']], title: "Delete tool" });
+                            builder.AddBtn({ icon: 'glyphicon-list-alt', function: 'openForm2', param: [row['Id'], 'INSPECTIONS'], title: "Add inspection" });
+                        }
                         builder.AddBtn({ icon: 'glyphicon-save-file', function: 'loadReport', param: [row['Id']], title: "Report" });
                         return builder.build();
                     }
@@ -132,7 +138,7 @@
 
     function loadReport(Id) {
         $.ajax({
-            url: '/Mantenimiento/Wtf_Herramientas/VerReporte?Id='+Id,
+            url: '/Mantenimiento/Wtf_Herramientas/VerReporte?Id=' + Id,
             contentType: 'application/json; charset=utf-8',
             datatype: 'json',
             type: "GET",
@@ -140,7 +146,7 @@
                 //alert("sucess");
                 window.location = raiz + data.ruta + data.fileName;
             }
-        }); 
+        });
     }
 
     function loadGeneralReport() {
