--- a/Coldairarrow.Web/Views/Home/Login.cshtml
+++ b/Coldairarrow.Web/Views/Home/Login.cshtml
@@ -27,8 +27,7 @@
 <body class="hold-transition login-page" style="height:80%">
     <div class="login-box">
         <div class="login-logo">
-            <img src="~/Imagen/logo1.svg" alt="GEO">
-            <a href="#"><b>TOOLS</b></a>
+            <img src="~/Imagen/toolslogo.png" alt="Maintenace tools logo" style="width:100%">
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
