--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Controles/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Controles/Index.cshtml
@@ -1,7 +1,7 @@
 @using Coldairarrow.Business.Base_SysManage;
 @{
     Layout = "~/Views/Shared/_Layout_List.cshtml";
-    var userManage = PermissionManage.OperatorHasPermissionValue("sysuser.manage");
+    var userManage = PermissionManage.OperatorHasPermissionValue("operControls.manage");
 }
 
 <div class="fx-content">
