--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Form.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Form.cshtml
@@ -1,12 +1,14 @@
 @using Coldairarrow.Entity.Mantenimiento;
 @using Coldairarrow.Util;
 @using Coldairarrow.Business.Mantenimiento;
+@using Coldairarrow.Business.Common;
 
 @{
     Layout = "~/Views/Shared/_Layout_Form.cshtml";
 
     var obj = (Wtf_Herramientas)Model;
     var objStr = Html.Raw(obj.ToJson());
+    var opUser = Html.Raw(Operator.UserId);
 }
 
 <div style="padding:15px;padding-right:45px;">
@@ -28,6 +30,14 @@
         </div>
 
         <div class="form-group form-group-sm">
+            <label class="col-sm-2 control-label">Location</label>
+            <div class="col-sm-5">
+                <select id="plantHList" class="selectpicker form-control" name="plantHList" data-style="btn-default btn-sm" required title="Select one"></select>
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+
+        <div class="form-group form-group-sm">
             <label class="col-sm-2 control-label">Group</label>
             <div class="col-sm-5">
                 <select id="tipoHList" class="selectpicker form-control" name="tipoHList" data-style="btn-default btn-sm" required title="Select one"></select>
@@ -44,14 +54,6 @@
         </div>
     </div>
     -->
-        
-    <div class="form-group form-group-sm">
-        <label class="col-sm-2 control-label">Location</label>
-        <div class="col-sm-5">
-            <select id="plantHList" class="selectpicker form-control" name="plantHList" data-style="btn-default btn-sm" required title="Select one"></select>
-            <div class="help-block with-errors"></div>
-        </div>
-    </div>
     
         <!--
     <div class="form-group form-group-sm">
@@ -101,6 +103,7 @@
     var statusId = @obj.Estado;
     var objId = @obj.Id;
     var noOpDesc;
+    var userId = "@opUser";
     //var classId = @obj.IdClaseHerramienta;
     var baseId = @obj.IdUbicacion;
 
@@ -128,21 +131,8 @@
             minView: 2//日期选择
         });
         */
-        $('#tipoHList').selectpicker({
-            url: '/Mantenimiento/Wtf_TipoHerramienta/GetDataList_NoPagin',
-            value: typeId,
-            valueField: 'Id',
-            textField: 'Descripcion',
-            pleaseSelect: false
-        });
-        $('#tipoHList').on('refreshed.bs.select', function (e) {
-            // calls on data loaded
-            if (typeId > 0) {
-                $(this).selectpicker('val', typeId);
-            }
-        });
-
-        /*
+        
+       /*
         $('#claseHList').selectpicker({
             url: '/Mantenimiento/Wtf_ClaseHerramienta/GetDataList_NoPagin',
             value: classId,
@@ -168,10 +158,19 @@
         $('#plantHList').on('refreshed.bs.select', function (e) {
             // calls on data loaded
             if (baseId > 0) {
+                console.log("refresca planthlist");
                 $(this).selectpicker('val', baseId);
+                //refreshTypesTable();
             }
         });
+        $('#plantHList').on('changed.bs.select', function (e) {
+            // calls on data changed
+            console.log("cambia planthlist");
+            baseId = this.value;
+            refreshTypesTable();
+        });
 
+        
         //表单校验
         $('#form').validator().on('submit', function (e) {
             //校验成功
@@ -220,6 +219,33 @@
             $('#EstadoNoOperativo').val(noOpDesc);
         }
         return result;
+    }
+
+    function refreshTypesTable() {
+        $('#tipoHList').selectpicker('destroy');
+        $('#tipoHList').selectpicker({
+            url: '/Mantenimiento/Wtf_TipoHerramienta/GetDataListByUserLocation_NoPagin?IdUbicacion={0}&IdUsuario={1}'.format(baseId, userId),
+            value: typeId,
+            valueField: 'Id',
+            textField: 'Descripcion',
+            pleaseSelect: false
+        });
+
+        $('#tipoHList').on('refreshed.bs.select', function (e) {
+            // calls on data loaded
+            if (typeId > 0) {
+                console.log("type list refrescado " + (new Date().valueOf().toString()));
+                $(this).selectpicker('val', typeId);
+            }
+        });
+
+        $('#tipoHList').on('loaded.bs.select', function (e) {
+            // calls on data loaded
+            if (typeId > 0) {
+                console.log("type list cargado" + (new Date().valueOf().toString()));
+                $(this).selectpicker('val', typeId);
+            }
+        });
     }
 
     //提交表单
