--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_TipoHerramienta/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_TipoHerramienta/Index.cshtml
@@ -2,7 +2,7 @@
 @using Coldairarrow.Business.Base_SysManage;
 @{
     Layout = "~/Views/Shared/_Layout_List.cshtml";
-    var userManage = PermissionManage.OperatorHasPermissionValue("sysuser.manage");
+    var userManage = PermissionManage.OperatorHasPermissionValue("operGroups.manage");
 }
 <div class="fx-content">
     <div id="toobar">
